--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Backend/StockFlow.Server/appsettings.json
+/Backend/StockFlow.Infrastructure/Migrations/20250226121804_StockFlowInitialDb.cs
+/Backend/StockFlow.Infrastructure/Migrations/ApplicationDbContextModelSnapshot.cs
