Repositories implemented. Services initial structure and service registration implemented. Error handling middleware and jwt config implemented.

--- a/Backend/StockFlow.Server/StockFlow.Server.csproj
+++ b/Backend/StockFlow.Server/StockFlow.Server.csproj
@@ -23,11 +23,10 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Constants\" />
-    <Folder Include="Middlewares\" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StockFlow.Application\StockFlow.Application.csproj" />
     <ProjectReference Include="..\StockFlow.Infrastructure\StockFlow.Infrastructure.csproj" />
   </ItemGroup>
 
