--- a/Backend/StockFlow.Server/Properties/launchSettings.json
+++ b/Backend/StockFlow.Server/Properties/launchSettings.json
@@ -5,10 +5,9 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5154",
+      "applicationUrl": "http://localhost:3005",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
