--- a/Backend/StockFlow.Tests/StockFlow.Tests.csproj
+++ b/Backend/StockFlow.Tests/StockFlow.Tests.csproj
@@ -33,11 +33,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\StockFlow.Infrastructure\StockFlow.Infrastructure.csproj" />
+    <ProjectReference Include="..\StockFlow.Server\StockFlow.Server.csproj" />
   </ItemGroup>
 
 </Project>
